<resources>
    <string name="app_name">Assignment3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="name">Stealth Messenger W13</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_started">Get Started</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="bg">BG</string>
    <string name="not_registered_create_account">Not registered? Create Account</string>
</resources>