<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:src="@drawable/wallpaper"
            android:contentDescription="@string/bg"/>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="35dp"
                android:layout_gravity="bottom">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_marginBottom="100dp"
            >
                <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/logo02"
                        android:layout_gravity="center_horizontal"
                />
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/name"
                          android:textSize="30sp"
                          android:textStyle="bold"
                          android:textColor="@color/white"
                          android:gravity="center_horizontal"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:background="@color/cyanGreyAlpha">
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:padding="20dp">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/username_hint"
                              android:textSize="17sp"
                              android:textColor="@color/white"
                              android:textStyle="bold"
                    />
                    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:hint="@string/username"
                              android:textColorHint="#85FFFFFF" android:autofillHints="false" android:inputType="text"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/password_hint"
                              android:textSize="17sp"
                              android:textColor="@color/white"
                              android:textStyle="bold"
                              android:paddingTop="10dp"/>
                    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:hint="@string/password"
                              android:textColorHint="#85FFFFFF" android:autofillHints="false"
                              android:inputType="textPassword"/>
                </LinearLayout>
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:orientation="horizontal"
                              android:padding="20dp"
                              android:background="@color/cyanGrey">

                    <TextView android:layout_width="0dp" android:layout_height="wrap_content"
                              android:text="@string/get_started"
                              android:textSize="17sp"
                              android:textColor="@color/white"
                              android:textAlignment="textStart"
                              android:layout_weight="0.3"/>
                    <ImageButton android:layout_width="25dp" android:layout_height="match_parent"
                                 android:layout_gravity="end"
                                 android:background="@color/transparent"
                                 android:src="@drawable/pbtn"
                                 android:scaleType="fitCenter" android:contentDescription="@string/get_started"/>
                </LinearLayout>
            </LinearLayout>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/createAccText"
                      android:textSize="17sp"
                      android:textColor="@color/white"
                      android:textAlignment="center"
                      android:paddingTop="20dp"/>

        </LinearLayout>


    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>